--- a/index.html
+++ b/index.html
@@ -151,5 +151,6 @@
 </head>
   <body class="antialiased h-screen w-screen overflow-hidden selection:bg-primary selection:text-primary-foreground font-sans">
     <div id="root" class="h-full w-full flex flex-col"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
